# tauri-study

./: components.d.ts  package.json  pnpm-lock.yaml  vite.config.ts  wakatime.db
data/database/: wakatime.db  wakatime1.db
json/: 2023-04-04 copy.json  2023-04-04.json  summaries_2023-01-05.json
public/: wakatime.db.sql
script/: wakatime.db.sql
src/: App.vue  main.ts  styles.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/data/database/: wakatime.db
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: categories.rs  dependencies.rs  editors.rs  grand_total.rs  languages.rs  lib.rs  machines.rs  operating_systems.rs  prelude.rs  projects.rs  range.rs  wakatime.rs
src-tauri/src/: commands.rs  db.rs  init.rs  main.rs
src-tauri/src/api/: api.rs
src-tauri/src/dao/: mod.rs  wakatime_dao.rs
src-tauri/src/entity/: config.rs  mod.rs  wakatime.rs
src-tauri/src/res/: charts_vo.rs  gists.rs  mod.rs  wakatime.rs
src-tauri/src/service/: mod.rs  wakatime_service.rs
src-tauri/src/tools/: const_.rs  mod.rs  tools.rs
src-tauri/src/utils/: database_utils.rs  file_utils.rs  http_utils.rs  mod.rs
src/components/: DataView.vue  Greet.vue  HomeView.vue  Menu.vue  SettingView.vue
src/router/: index.ts
src/ts/: Api.ts
