[package]
name = "demo1"
version = "0.0.0"
description = "A Tauri App"
authors = ["zzwtsy"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[workspace]
members = [".", "entity"]

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.8.1"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.1", features = ["full"] }
once_cell = "1.17.1"
anyhow = "1.0.71"
sea-orm = { version = "0.11.3", features = [
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "macros",
] }
entity = { path = "./entity" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
